# SG-NextGenCoding

./: 2.1-review&changes.json  2704_438085554_1.md  README.md  proposal.md
.gemini-temp/: manual_step_notification.txt  manual_step_notification_2.txt  manual_step_notification_3.txt  manual_step_notification_4.txt  manual_step_notification_5.txt  manual_step_notification_6.txt  output.txt  test_failure_notification.txt
backend/: .gitignore  check_schema.py  configure_bucket_rls.py  create_bucket_direct.py  create_profile.py  disable_documents_rls.py  make_bucket_public.py  pyproject.toml  setup_documents_rls.py  setup_supabase_storage.py
backend/app/: dependencies.py  main.py  supabase_client.py
backend/app/api/: history.py
backend/app/api/auth/: forgot_password.py  login.py  register.py  reset_password.py
backend/app/api/feedback/: __init__.py  main.py
backend/app/api/quizzes/: __init__.py  main.py
backend/app/api/summaries/: main.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: document.py  feedback.py  history.py  quiz.py
backend/app/services/ai_generation/: gemini_client.py  quiz_generator.py  summary_generator.py  text_extractor.py
backend/migrations/: create_feedback_table.sql  create_quiz_tables.sql
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_feedback.py  test_health.py  test_history.py  test_login.py  test_password_reset.py  test_quizzes.py  test_register.py  test_supabase.py
backend/tests/services/: test_ai_generation.py  test_text_extractor.py
backend/tests/test_files/: test.docx
docs/: PRD.md  architecture.md  backlog.md  bmm-workflow-status.md  brainstorming-session-results-onsdag 5. november 2025.md  epics.md  final-app-showcase.html  implementation-readiness-report-2025-11-26.md  journey-visualization.html  product-brief-ibe160-2025-11-19.md  project-plan.md  research-technical-2025-11-19.md  sprint-status.yaml  test-design-epic-1.md  ux-design-directions.html  ux-design-specification.md  validation-report-2025-11-20.md
frontend/: README.md  jest.config.js  jest.polyfills.js  jest.setup.ts  package.json  pnpm-lock.yaml  test-output.txt  (+2 more)
(+272 files in other folders)
