[tool.poetry]
name = "backend"
version = "0.1.0"
description = "IBE160 Backend"
authors = ["BIP <bip@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.122.0"
uvicorn = "^0.38.0"
supabase = "^2.24.0"
python-dotenv = "^1.2.1"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
